// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channel reducer handles actions - setChannelId 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": "this-is-a-test-id",
  "message": "",
  "shareableUri": "",
  "address": "",
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setLoading 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "",
  "address": "",
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setLoadingMessage 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "",
  "address": "",
  "loader": Immutable.Record {
    "loading": false,
    "message": "this is a loading message",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setShareableUri 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "zbay://channel/this-is-a-hash",
  "address": "",
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles epics - loadChannel fetches messages 1`] = `Immutable.List []`;

exports[`channel reducer handles epics - loadChannel sets uri 1`] = `"zbay://channel/eJxNizEOgCAMAL9iGkcdWF19CUqjDVKMRY0S/i4YB6dL7nIRWDuEDvpZM+NSKWhAG7OhSLa3qIASPlGXaFDGjdZAnn+bHvwe3tnilc8IdNjciUfviKf2IDwLc24VpPQAl0oo4g=="`;

exports[`channel reducer handles epics - resendMessage resend selected message 1`] = `
Immutable.Map {
  "new-op-id": Immutable.Operation {
    "opId": "new-op-id",
    "type": "pendingMessage",
    "meta": Immutable.Record {
      "message": Immutable.Map {
        "type": 1,
        "spent": "0.0001",
        "signature": Object {
          "data": Array [
            241,
            42,
            192,
            246,
            156,
            56,
            237,
            27,
            207,
            63,
            7,
            116,
            49,
            245,
            240,
            41,
            205,
            100,
            223,
            216,
            54,
            16,
            209,
            249,
            45,
            255,
            205,
            107,
            29,
            36,
            226,
            188,
            12,
            89,
            152,
            191,
            128,
            214,
            43,
            120,
            99,
            26,
            151,
            56,
            135,
            92,
            147,
            202,
            152,
            198,
            160,
            217,
            161,
            79,
            169,
            17,
            197,
            76,
            86,
            112,
            232,
            7,
            241,
            142,
          ],
          "type": "Buffer",
        },
        "r": 1,
        "createdAt": 1551963828,
        "message": "This is some message test-1",
      },
      "channelId": "",
    },
    "txId": null,
    "error": null,
    "status": "pending",
  },
}
`;

exports[`channel reducer handles epics - sendOnEnter sends message 1`] = `
Object {
  "createdAt": 1551963828,
  "message": "this is some message",
  "r": 1,
  "signature": Object {
    "data": Array [
      93,
      85,
      97,
      98,
      81,
      1,
      181,
      115,
      32,
      199,
      234,
      201,
      0,
      241,
      204,
      35,
      64,
      224,
      126,
      70,
      101,
      55,
      234,
      147,
      112,
      148,
      74,
      153,
      86,
      57,
      52,
      142,
      88,
      47,
      206,
      222,
      169,
      42,
      105,
      70,
      2,
      3,
      105,
      72,
      56,
      219,
      14,
      60,
      18,
      200,
      57,
      118,
      188,
      29,
      134,
      99,
      133,
      197,
      172,
      242,
      125,
      123,
      155,
      238,
    ],
    "type": "Buffer",
  },
  "spent": undefined,
  "type": 1,
}
`;

exports[`channel reducer handles epics -clearNewMessages clears new messages for current channel 1`] = `undefined`;
